fix: text is not align in the button and wordwarp in the left side in desktop screen

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -160,7 +160,7 @@ h2 {
 }
 
 @media only screen and (max-width: 600px) {
-  .fc-l {font-size: 18px;}
+  
 }
 
 @media only screen and (max-width: 1350px) {
